# assistant_telegram_bot

./: .gitignore  pyproject.toml
telegram_bot/: assistant_tutorial.py  telegram_bot_tutorial.py  threads_db.db
