[tool.poetry]
name = "telegram-bot"
version = "0.1.0"
description = ""
authors = ["Dauletkhan <ab.dauletkhan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
python-telegram-bot = "^20.8"
openai = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
